--- a/app/header/header.component.html
+++ b/app/header/header.component.html
@@ -6,4 +6,5 @@
 	<li><a routerLink="animations">Animations</a></li>
 	<li><a routerLink="api">API</a></li>
 	<li><a routerLink="materials">Materials</a></li>
+    <li><a routerLink="adds">Adds</a></li>
 </ul>
