--- a/app/users/users.component.html
+++ b/app/users/users.component.html
@@ -1,3 +1,5 @@
 <ul *ngFor = "let the of users">
 	<li><a routerLink="selectedusers/{{the.id}}">{{the.id}}</a></li>
 </ul>
+<!-- <div *ngIf="true">This IS Directive</div>
+ -->
